// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactForm > should render responsive 1`] = `
<DocumentFragment>
  <form
    class="space-y-0"
    data-testid="contact-form"
  >
    <fieldset
      class="flex min-w-0 flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="name"
      >
        Name
      </label>
      <div
        class=" css-14zfvme"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
            data-testid="contact-form__name-input"
            name="name"
            type="text"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <div
      class="!-mx-4 !mt-4 !p-4 css-1mwq138"
    >
      <fieldset
        class="flex min-w-0 flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-0-input"
                  id="downshift-0-label"
                />
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-0-menu"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                      data-testid="SelectDropdown__input"
                      id="downshift-0-input"
                      name="network"
                      placeholder="Enter a cryptoasset name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="absolute inset-0 block cursor-pointer md:hidden"
                          />
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="chevron-down-small"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-0-label"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex min-w-0 flex-col css-1bcidjh"
        data-testid="ContactForm__address"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="address"
        >
          Address
        </label>
        <div
          class="css-14zfvme"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
              data-testid="contact-form__address-input"
              name="address"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Add Address
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 justify-end"
    >
      <div
        class="css-145pihz"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Cancel
          </div>
        </button>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          <div
            class="flex items-center space-x-2"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm > should render responsive 2`] = `
<DocumentFragment>
  <form
    class="space-y-0"
    data-testid="contact-form"
  >
    <fieldset
      class="flex min-w-0 flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="name"
      >
        Name
      </label>
      <div
        class=" css-14zfvme"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
            data-testid="contact-form__name-input"
            name="name"
            type="text"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <div
      class="!-mx-4 !mt-4 !p-4 css-1mwq138"
    >
      <fieldset
        class="flex min-w-0 flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-3-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-3-input"
                  id="downshift-3-label"
                />
                <div
                  class="css-14zfvme"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-3-menu"
                      aria-labelledby="downshift-3-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                      data-testid="SelectDropdown__input"
                      id="downshift-3-input"
                      name="network"
                      placeholder="Enter a cryptoasset name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="absolute inset-0 block cursor-pointer md:hidden"
                          />
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="chevron-down-small"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-3-label"
                id="downshift-3-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex min-w-0 flex-col css-1bcidjh"
        data-testid="ContactForm__address"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="address"
        >
          Address
        </label>
        <div
          class="css-14zfvme"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
              data-testid="contact-form__address-input"
              name="address"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Add Address
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 justify-end"
    >
      <div
        class="css-145pihz"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Cancel
          </div>
        </button>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          <div
            class="flex items-center space-x-2"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
